# recipier

./: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  config.py  create_meal_tasks.py  docker-compose.dev.yml  docker-compose.yml  example_meal_plan.json  generate_meal_plan.py  localization.py  meal_plan.json  meal_plan_schema.json  meal_planner.py  meal_planning_schema.json  meals_database.json  meals_database_schema.json  my_config.json  pyproject.toml  todoist_adapter.py
.github/workflows/: docker-publish.yml  release.yml  tests.yml
backend/: __init__.py  config_loader.py  logging_config.py  main.py
backend/models/: schemas.py
backend/routers/: config.py  meal_plans.py  meals.py  tasks.py
data/: 2026-01-03.json  2026-01-06.json
docs/: WEB_INTERFACE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/ActionBar/: ActionBar.jsx  TaskGenerationWarningModal.jsx
frontend/src/components/Calendar/: CalendarView.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/MealDetailsModal/: MealDetailsModal.jsx
frontend/src/components/MealModal/: MealConfigModal.jsx
frontend/src/components/MealsLibrary/: MealCard.jsx  MealsLibrary.jsx
frontend/src/components/RoundingWarningModal/: RoundingWarningModal.jsx
frontend/src/components/Settings/: SettingsModal.jsx
frontend/src/components/ShoppingManager/: ShoppingManager.jsx  ShoppingTripDateModal.jsx
frontend/src/hooks/: useMealPlan.jsx  useMeals.js  useTheme.jsx  useTranslation.js
frontend/src/localization/: translations.js
frontend/src/utils/: calorieCalculator.js  ingredientDisplay.js
recipier/: __version__.py  config.py  create_meal_tasks.py  generate_meal_plan.py  localization.py  meal_planner.py  rounding_warnings.py  run_backend.py  run_frontend.py  todoist_adapter.py
schemas/: meal_plan_schema.json  meals_database_schema.json
scripts/: release_build.sh
tests/: README.md  TEST_FIXES.md  conftest.py
tests/api/: test_config_router.py  test_meal_plans.py  test_meals.py  test_tasks.py
tests/integration/: test_end_to_end.py
tests/unit/: test_config.py  test_localization.py  test_meal_planner.py
