[project]
name = "recipier"
version = "0.1.0"
description = "Meal planning to Todoist task creator"
authors = [
    { name = "Lukasz Sroka" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "todoist-api-python>=2.0.0",
]

[project.scripts]
recipier = "create_meal_tasks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "config.py",
    "meal_planner.py",
    "todoist_adapter.py",
    "create_meal_tasks.py",
]

[dependency-groups]
dev = []
